RESOLVED FIXED261913
REGRESSION (267539@main): [iOS] Webpage unexpectedly scrolls down while typing in the find bar
https://bugs.webkit.org/show_bug.cgi?id=261913
Summary REGRESSION (267539@main): [iOS] Webpage unexpectedly scrolls down while typin...
Aditya Keerthi
Reported 2023-09-21 16:05:01 PDT
Attachments
Aditya Keerthi
Comment 1 2023-09-21 16:25:29 PDT
EWS
Comment 2 2023-09-21 19:33:41 PDT
Committed 268295@main (5aa322f6a3dd): <https://commits.webkit.org/268295@main> Reviewed commits have been landed. Closing PR #18052 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.